# wdiff

./: .bzrignore  .x-sc_GPL_version  .x-sc_makefile_path_separator_check  AUTHORS  BACKLOG  ChangeLog  ChangeLog.old  Makefile.am  Makefile.in  NEWS  README  README-mdiff  TAGS  THANKS  TODO  acconfig.h  aclocal.m4  autogen.sh  c-boxes.el  cbars.sh  cfg.mk  check_it  config.h.in  configure  configure.ac  configure.in  error.c  getopt.c  getopt.h  getopt1.c  maint.mk  missing  mkinstalldirs  pathmax.h  readpipe.c  stamp-h.in  stamp-vti  strstr.c  texinfo.tex  version.texi  (+6 more)
build-aux/: gendocs.sh  msgitm.pm  print-po.pl  regen-ignore.sh  update-gnulib.sh  vc-list-files
doc/: ChangeLog.old  Makefile.am  Makefile.in  flags.texi.in  help2man  stamp-vti  texinfo.tex  version.texi  wdiff.info  wdiff.texi
i18n/: ChangeLog  Makefile.am  Makefile.in  cs.mo  cs.po  de.mo  es.mo  es.po  fr.mo  nl.mo  nl.po  no.po  ru.po  sv.mo  sv.po
lib/: ChangeLog  Makefile.am  Makefile.in  configmake.h  error.c  error.h  getline.c  getline.h  getopt.c  getopt.h  getopt1.c  gettext.c  gettext.h  langinfo.in.h  malloc.c  readpipe.c  realloc.c  regcomp.c  regex.c  regex.h  regex_internal.h  regexec.c  stdio.in.h  str-two-way.h  string.in.h  strstr.c  sys_wait.in.h  uniwidth.in.h  wctype.in.h  writepipe.c  xalloc.h  xmalloc.c  xstrdup.c
lib/po/: LINGUAS  Makevars  POTFILES.in  af.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hu.po  it.po  ja.po  ko.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  (+1 more)
lib/uniwidth/: cjk.h  width.c
m4/: ChangeLog  Makefile.am  Makefile.in  gettext.m4  gnulib-cache.m4  gnulib-comp.m4
man/: Makefile.am  Makefile.in  debian669340.patch  mdiff.1  unify.1  wdiff.1  wdiff.h2m
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  en_GB.gmo  en_GB.po  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ms.gmo  ms.po  (+35 more)
src/: ChangeLog  Makefile.am  Makefile.in  cbars.in  mdiff.c  pipes.c  readpipe.c  system.h  unify.c  wdiff.c  wdiff.h  wdiff2.c  writepipe.c
tests/: ChangeLog  Makefile.am  Makefile.in  atconfig.in  atgeneral.m4  cluster.at  cluster.m4  package.m4  suite.m4  test-one  testsuite  testsuite.at  wdiff.at  wdiff.m4
